Fix - Header: Stopping nav wraparound bug

--- a/assets/_sass/views/layout/_header.sass
+++ b/assets/_sass/views/layout/_header.sass
@@ -13,6 +13,7 @@ header.banner
     &:hover
       text-decoration: underline
   a.brand
+    float: left
     font-size: $font-size--m
     font-style: italic
     text-transform: uppercase
@@ -36,6 +37,7 @@ header.banner
   img
     display: none
   nav
+    +clearfix
   ul.nav
     +float-right
     text-transform: uppercase
